# dataswamp-biosystems

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: company.yaml  generation.yaml  ownership.yaml  people.yaml  programmes.yaml  stewardship.yaml  studies.yaml  teams.yaml
config/truth/: generation-plan.yaml
config/vocabularies/: access-classifications.yaml  intended-uses.yaml  lifecycle-stages.yaml  modalities.yaml  retention-classes.yaml  scientific-domains.yaml  stewardship-types.yaml  training-approval-statuses.yaml
docs/: domain-model.md  file-generation.md  observed-state.md  progress.md  truth-graph-schema.md
docs/adr/: 0001-catalogue-independent-canonical-model.md  0002-truth-vs-observed-state.md  0003-imperfection-engine.md
src/dataswamp_biosystems/: __init__.py  cli.py
src/dataswamp_biosystems/company/: __init__.py  config.py  entities.py  errors.py  generation.py  identifiers.py  loader.py  relationships.py  vocabularies.py
src/dataswamp_biosystems/estate/: __init__.py  entities.py  errors.py  formats.py  generator.py  profiles.py  validate.py  writer.py
src/dataswamp_biosystems/observed/: __init__.py  defects.py  engine.py  entities.py  errors.py  index.py  inject.py  profiles.py  validate.py  writer.py
tests/: test_cli.py  test_package.py
tests/company/: conftest.py  test_cli_validate_config.py  test_loader.py
tests/estate/: conftest.py  test_cli.py  test_formats.py  test_generator.py  test_validate.py  test_writer.py
tests/observed/: conftest.py  test_cli.py  test_defects.py  test_engine.py  test_inject.py  test_registry.py  test_validate.py
tests/truth/: conftest.py  test_cli_generate_truth.py  test_determinism.py  test_generator.py  test_invariants.py  test_truth_state.py
(+13 files in other folders)
