[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dataswamp-biosystems"
version = "0.1.0"
description = "An open, entirely fictional synthetic oncology data estate and governance benchmark. No real patient data is used."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Ron Finn", email = "28505981+ronfinn@users.noreply.github.com" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.15",
    "pydantic[email]>=2.7",
    "pyyaml>=6",
    "numpy>=2.0",
    "pyarrow>=17.0",
    "pillow>=10.4",
    "tifffile>=2024.8.30",
    "anndata>=0.11",
]

[project.scripts]
dataswamp = "dataswamp_biosystems.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4",
    "types-pyyaml>=6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dataswamp_biosystems"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

# Scientific-file writer dependencies ship without type stubs / py.typed markers.
[[tool.mypy.overrides]]
module = ["pyarrow.*", "tifffile.*", "anndata.*", "PIL.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks slower tests (e.g. full demo-profile generation); deselect with -m 'not slow'",
]
